syntax = "proto3";

package service;

option go_package = "./proto;service";

service MailService {
	rpc Call(MailCallRequest) returns (MailCallResponse) {}
}

message MailCallRequest {
    repeated string toAddress = 1;
    string subject = 2;
    string text = 3;
}

message MailCallResponse {
    string toAddress = 1;
    string subject = 2;
    string text = 3;
}


